--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,24 @@
 {
-  "cSpell.words": ["Выводит", "группы", "количество", "подкатегорий"]
+  "cSpell.words": [
+    "больше",
+    "введено",
+    "Выводит",
+    "группы",
+    "Делает",
+    "если",
+    "зеленым",
+    "инпута",
+    "кнопкам",
+    "количество",
+    "красная",
+    "красным",
+    "меньше",
+    "подкатегорий",
+    "простой",
+    "рамка",
+    "рамку",
+    "символов",
+    "Создает",
+    "счетчик"
+  ]
 }
