--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,18 +7,23 @@
     "Делает",
     "если",
     "зеленым",
+    "изменяется",
     "инпута",
     "кнопкам",
     "количество",
     "красная",
     "красным",
     "меньше",
+    "перетаскивании",
     "подкатегорий",
+    "ползунка",
     "простой",
+    "размер",
     "рамка",
     "рамку",
     "символов",
     "Создает",
-    "счетчик"
+    "счетчик",
+    "шрифта"
   ]
 }
