--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "cSpell.words": [
     "больше",
+    "валидацию",
     "введено",
     "Выводит",
     "группы",
+    "данные",
     "Делает",
     "если",
     "зеленым",
@@ -14,16 +16,21 @@
     "красная",
     "красным",
     "меньше",
+    "минимальную",
+    "обьект",
     "перетаскивании",
     "подкатегорий",
     "ползунка",
+    "Проводит",
     "простой",
     "размер",
     "рамка",
     "рамку",
     "символов",
+    "собирает",
     "Создает",
     "счетчик",
+    "формы",
     "шрифта"
   ]
 }
