--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,13 @@
     "Делает",
     "если",
     "зеленым",
+    "значение",
+    "изменяет",
     "изменяется",
     "инпута",
+    "клике",
     "кнопкам",
+    "кнопку",
     "количество",
     "красная",
     "красным",
@@ -30,7 +34,9 @@
     "собирает",
     "Создает",
     "счетчик",
+    "фона",
     "формы",
+    "цвет",
     "шрифта"
   ]
 }
