--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,16 @@
     "группы",
     "данные",
     "Делает",
+    "другого",
     "если",
     "зеленым",
     "значение",
     "изменяет",
     "изменяется",
     "инпута",
+    "исчезают",
+    "каждый",
+    "квадраты",
     "клике",
     "кнопкам",
     "кнопку",
@@ -21,6 +25,7 @@
     "красным",
     "меньше",
     "минимальную",
+    "нажатии",
     "обьект",
     "перетаскивании",
     "подкатегорий",
@@ -31,12 +36,14 @@
     "рамка",
     "рамку",
     "символов",
+    "следующий",
     "собирает",
     "Создает",
     "счетчик",
     "фона",
     "формы",
     "цвет",
+    "цвета",
     "шрифта"
   ]
 }
